--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
 @import "materialize";
 @import "material_icons";
-@import "shared/\ _navbar.scss";
+@import "shared/navbar";
+@import "shared/footer";
+@import "pages";
